--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="search_text">Поиск</string>
+    <string name="medialibrary_text">Медиатека</string>
+    <string name="settings_text">Настройки</string>
 </resources>
