--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="bad_internet_connection_error">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="your_history_text">Вы искали</string>
     <string name="clear_history">Очистить историю</string>
+    <string name="Country">Страна</string>
+    <string name="genre">Жанр</string>
+    <string name="year">Год</string>
+    <string name="album">Альбом</string>
+    <string name="duration">Длительность</string>
 </resources>
