36-ий commit 18-ый спринт, использование фрагментов для Медиатеки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="year">Год</string>
     <string name="album">Альбом</string>
     <string name="duration">Длительность</string>
+    <string name="fragment_list_playlist_gag">Вы не создали ни одного плейлиста</string>
+    <string name="fragment_favorite_gag">Ваша медиатека пуста</string>
+    <string name="new_playlist">Новый плейлист</string>
 </resources>
