--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="fragment_list_playlist_gag">Вы не создали ни одного плейлиста</string>
     <string name="fragment_favorite_gag">Ваша медиатека пуста</string>
     <string name="new_playlist">Новый плейлист</string>
+    <string name="favorite_track">Избранные треки</string>
+    <string name="playlists">Плейлисты</string>
 </resources>
