47-ий commit 22-ый спринт

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,12 @@
     <string name="new_playlist">Новый плейлист</string>
     <string name="favorite_track">Избранные треки</string>
     <string name="playlists">Плейлисты</string>
+    <string name="playlist_name">Название*</string>
+    <string name="playlist_description">Описание</string>
+    <string name="playlist_create">Создать</string>
+    <string name="new_playlist_alert_title">Завершить создание плейлиста?</string>
+    <string name="new_playlist_alert_message">Все несохраненные данные будут потеряны</string>
+    <string name="new_playlist_alert_cancel">Отмена</string>
+    <string name="new_playlist_alert_confirm">Завершить</string>
+    <string name="new_playlist_created">Плейлист "%s" создан</string>
 </resources>
