--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,9 @@
     <string name="new_playlist_alert_message">Все несохраненные данные будут потеряны</string>
     <string name="new_playlist_alert_cancel">Отмена</string>
     <string name="new_playlist_alert_confirm">Завершить</string>
-    <string name="new_playlist_created">Плейлист "%s" создан</string>
+    <string name="new_playlist_created">Плейлист %s создан</string>
+    <string name="add_track_to_playlist">Добавлено в плейлист  %s</string>
+    <string name="error_add_track_to_playlist">Трек уже добавлен в плейлист %s</string>
+    <string name="add_to_playlist">Добавить в плейлист</string>
+    <string name="track_count_in_playlist">%s %s</string>
 </resources>
