48-ий commit 22-ый спринт

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,13 @@
     <string name="error_add_track_to_playlist">Трек уже добавлен в плейлист %s</string>
     <string name="add_to_playlist">Добавить в плейлист</string>
     <string name="track_count_in_playlist">%s %s</string>
+    <plurals name="tracks_plurals">
+        <item quantity="zero">%d треков</item>
+        <item quantity="one">%d трек</item>
+        <item quantity="two">%d трека</item>
+        <item quantity="few">%d трека</item>
+        <item quantity="many">%d треков</item>
+        <item quantity="other">%d треков</item>
+    </plurals>
+
 </resources>
